Historial: mover gráficas a pages/listar.php con selector de rango y tendencia (SMA3). Dashboard: quitar gráficas y mantener selector de rango en tabla. README: actualizado para reflejar la nueva ubicación de las gráficas. JS: soporte de tendencia y rango reutilizado.

--- a/.htaccess
+++ b/.htaccess
@@ -18,6 +18,9 @@ Options -Indexes
   RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
 
+# MIME para Web App Manifest
+AddType application/manifest+json .webmanifest
+
 # Variables de entorno para conexión a BD (solo en producción)
 # Descomenta y rellena en el servidor (no subas secretos al repo)
 # SetEnv DB_HOST sqlXXX.epizy.com
