--- a/.htaccess
+++ b/.htaccess
@@ -13,8 +13,9 @@ Options -Indexes
   # Bloquear acceso directo a la carpeta sql/
   RewriteRule ^sql/ - [F,L]
 
-  # Forzar HTTPS (si hay SSL activo en el hosting)
+  # Forzar HTTPS (si hay SSL activo en el hosting) excepto en localhost
   RewriteCond %{HTTPS} !=on
+  RewriteCond %{HTTP_HOST} !^(localhost|127\.0\.0\.1)$ [NC]
   RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
 
